<resources>
    <string name="app_name">JavaFishBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник рыбака</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_fish">Рыба</string>
    <string name="menu_rigging">Снасти</string>
    <string name="menu_bait">Наживка</string>
    <string name="menu_plant_food">Прикормка</string>
    <string name="various">Разное</string>
    <string name="tip">Полезные советы</string>
    <string name="fishing_stories">Рыбацкие истории</string>

    <string name="fish_som">Обыкнове́нный сом, или европе́йский сом(лат. Silurus glanis) — крупная пресноводная бесчешуйчатая рыба семейства сомовых.
            Окрас в большинстве случаев бурый с оттенками коричнево-зелёного, брюхо белое.</string>
    <string name="fish_burbot">Нали́м, или обыкнове́нный нали́м(лат. Lota lota) — единственная исключительно пресноводная рыба отряда трескообразных (Gadiformes). Имеет промысловую ценность. </string>
    <string name="fish_pike">Щука, или обыкновенная щука (лат. Esox lucius), — рыба семейства щуковых. Распространена в пресных водах Евразии и Северной Америки. </string>
    <string name="fish_crucian">Караси (лат. Carassius) — род лучепёрых рыб семейства карповых. </string>

    <string name="rigging_float">Обычная ловля на поплавок. Оснастка с грузилами и крючком находится ниже поплавка. </string>
    <string name="rigging_spinning"> Спиннинг – способ ловли хищной рыбы. Процесс рыбалки представляет собой проводку искусственных приманок под водой с целью имитации рыбки.</string>
    <string name="rigging_feeder">Донная спортивная ловля на груз-кормушку называется фидером. </string>
    <string name="rigging_feeder_lite">Сильно упрощённая форма фидера, является менее спортивной и чувствительной снастью.</string>

    <string name="bait_semolina">Манная наживка может готовиться двумя способами. Первый из них состоит в засыпании необходимой порции крупы из соотношения 1 столовая ложка на одну порцию. </string>
    <string name="bait_bread">Хлеб обычно используют для прикормки. Он для подобных целей просто безупречно подходит. Некоторые рыболовы идут дальше используют его уже как приманку. </string>
    <string name="bait_worm">Пескарь, окунь и плотва неплохо ловятся на обычного дождевого червя. Подобную приманку можно использовать несколько раз при грамотном подходе. Основной его
            недостаток – это необходимость приготовить заранее. </string>
    <string name="bait_aparis">Последний вид наживки, который очень распространен – это апарыши. Обычная личинка мухи, не трудно вырастить в домашних условиях, может достаточно долго храниться
            в прохладном месте, холодильнике. </string>

    <string name="Bait_for_riding_fish">При ловле уклейки, краснопёрки и прочих плавающих в верхних слоях воды пород рыб применяют так называемый
            прикормочный столб. Его создают с помощью небольших шариков, забрасываемых в воду с периодичностью 1-3 минуты.</string>
    <string name="White_fish_bait">Самая распространённая прикормка, проверенная временем и применяемая на рыбалке большинством рыболовов.</string>
    <string name="Special_bait_for_bream">В прикормку для леща не добавляют отруби, так как они привлекают много мелкой рыбы, которая мешает ловить.</string>
    <string name="Special_bait_for_carp">Для ловли карпа, как и леща, прикормка не содержит большого количества фракций, которые привлекают мелкую рыбу.
            Вместо этого, в прикормку добавляют целые зерна и пеллетс, которые могут удержать крупную рыбу в точке ловли.</string>

    <string name="Fisheries_basins">Критерии и порядок отнесения водного объекта или его части к водным объектам рыбохозяйственного значения,
            порядок определения категорий водных объектов рыбохозяйственного значения устанавливаются Правительством Российской
            Федерации.</string>
    <string name="Terms_of_spawning">Правила рыболовства Волжско-Каспийского рыбохозяйственного бассейна — документ.</string>

    <string name="Fishing_in_autumn">Рыбу можно ловить круглый год, вот только каждый сезон имеет свои принципиальные отличия и особенности.
            Отправляясь осенью на рыбалку, необходимо точно знать, какая именно рыба может в это время клюнуть и на что,
            какая снасть или оснастка будет более результативной и еще сотни нюансов.</string>
    <string name="How_to_cook">Даже опытные люди иногда совершают ошибки, когда варят раков – в результате, мясо рака получается неправильной
            консистенции и имеет не совсем «тот самый» вкус. Те, кто никогда не варил раков, все делают неправильно.</string>
</resources>